fix image size on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -419,6 +419,8 @@ form {
   body{
     cursor: pointer;
     background-position: center top;
+    max-width: 480px;
+    height: auto;
   }
   form{
     input[type=email],
